[tool.poetry]
name = "obinskit"
version = "0.1.1"
description = "Tool for working with ObinsKit SQLITE databases programatically and manually."
authors = ["Tim Black <timblaktu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pdbpp = "^0.10.3"
pudb = "^2022.1.1"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
